@@ -1,6 +1,7 @@
 2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>
 
  * Fixed bug 4994: tx_realurl_pathcache must not be flushed!
+ * Fixed bug 5150: Remove tx_realurl_pathcache table from MySQL Query Cache
 
 2007-09-10  Dmitry Dulepov  <dmitry@typo3.org>
 
